--- a/templates/index.html
+++ b/templates/index.html
@@ -126,7 +126,7 @@
                   <img class="img-fluid" src="../static/assets/img/TuneInMind_2.png" alt="..." />
                   <div class="portfolio-box-caption">
                       <!-- <div class="project-category text-white-50">Category</div> -->
-                      <div style = "text-align: center" class="project-name">Session bsed Recommendations</div>
+                      <div style = "text-align: center" class="project-name">Session based Recommendations</div>
                   </div>
               </a>
           </div>
@@ -231,12 +231,73 @@
 </div>
 <!-- Contact-->
 <section class="page-section" id="contact">
-    <div class="container px-4 px-lg-5">
+    <!-- <div class="container px-4 px-lg-5">
         <div class="row gx-4 gx-lg-5 justify-content-center">
             <div class="col-lg-8 col-xl-6 text-center">
-                <h2 class="mt-0">Let's Get In Touch!</h2>
+                <h2 class="mt-0">Conclusions/Discussion</h2>
+                <hr class="divider divider-light" /> -->
+                <div class="container px-4 px-lg-5">
+                    <h2 class="text-center mt-0">Challenges</h2>
+                    <hr class="divider" />
+                    <!-- <br> -->
+                <div class="row gx-4 gx-lg-5">
+                    
+                    <!-- <h3 style="text-align:center;"> Challenges </h3> -->
+                    <div class="col-lg-3 col-md-6 text-center">
+                        <div class="mt-5">
+                            
+                            <div class="mb-2"></div>
+                            <h3 class="h4 mb-2">Dataset Generation</h3>
+                            <p class="text-muted mb-0">As we used two APIs to generate data, combining their output to obtain common songs was 
+                                difficult especially to generate large amounts of data. Our data also contains ground truth that is available 
+                                only for a limited set of songs.</p>
+                        </div>
+                    </div>
+                    <div class="col-lg-3 col-md-6 text-center">
+                        <div class="mt-5">
+                            <div class="mb-2"></div>
+                            <h3 class="h4 mb-2">User Session</h3>
+                            <p class="text-muted mb-0">Session is determined by the number of songs that are 
+                                used to build an aggregate vector that helps recommend new songs to the user. We experimented with different 
+                                session lengths as it is a key factor to determine the model's
+                                sensitivity to mood changes of the user</p>
+                        </div>
+                    </div>
+                    <div class="col-lg-3 col-md-6 text-center">
+                        <div class="mt-5">
+                            <div class="mb-2"></div>
+                            <h3 class="h4 mb-2">Mood Aggregation</h3>
+                            <p class="text-muted mb-0">Once we obtain the list of songs in a session, it is important to understand how to aggregate these song vectors
+                                to build the best song representation for the session mood. We tried different averaging methods and used a weighted average
+                                approach although this again depends on the session length.</p>
+                        </div>
+                    </div>
+                    <div class="col-lg-3 col-md-6 text-center">
+                        <div class="mt-5">
+                            <div class="mb-2"></div>
+                            <h3 class="h4 mb-2">Cold Start</h3>
+                            <p class="text-muted mb-0">We are currently completely relying on the initial input of the user as we do not have user session data or user history data
+                                to start with an initial session mood. Using user history data, we can assess the usual session mood of the user and use it as a starter
+                                session mood.</p>
+                        </div>
+                    </div>
+                </div>
+                <p class="text-white-75 mb-4 fs-4">
+                    <h3>Conclusion and Future Scope</h3>
+                <br>
+                This was an interesting project with a novel approach. It provides motivation to make music recommendation more user friendly. The results obtained are 
+                promising and creates huge scope for growth in this area.
+                There are many ideas to expand this recommender system and take it further. A search functionality could be included for the user to search for the songs
+                they want to listen to. User mood patterns could also be studied from user listening history and song change behavior to better determine session
+                length for each user. Feature Engineering could be improved expanding on the moods to generate larger vector representations leveraging both lyrics and 
+                acoustic data. 
+
+                </p>
+                <p>
+                    
+                </p>
                 <hr class="divider" />
-                <p class="text-muted mb-5">Ready to start your next project with us? Send us a messages and we will get back to you as soon as possible!</p>
+                <p class="text-muted mb-5">Hope our app sets your mood right!</p>
             </div>
         </div>
         <!-- <div class="row gx-4 gx-lg-5 justify-content-center mb-5">
@@ -278,10 +339,31 @@
         </div> -->
         <div class="row gx-4 gx-lg-5 justify-content-center">
             <div class="col-lg-4 text-center mb-5 mb-lg-0">
-                <i class="bi-phone fs-2 mb-3 text-muted"></i>
-                <div>+1 (555) 123-4567</div>
+                
+                <div>
+                    <h3>Contributors</h3> 
+                    <!-- <ul>
+                        <li> Siddharth Devulapalli</li>
+                        <li> Mounika Balivada</li>
+                        <li> Sahithi Akiri</li>
+                        <li> Rohan Gupta Kandikonda</li>
+
+                    </ul> -->
+                        <br>
+                        <p> Mounika Balivada</p>
+                        <p> Siddharth Devulapalli</p>
+                        <p> Sahithi Akiri</p>
+                        <p> Rohan Gupta Kandikonda</p>
+    
+                </div>
             </div>
         </div>
+        <!-- <div class="row gx-4 gx-lg-5 justify-content-center">
+            <div class="col-lg-4 text-center mb-5 mb-lg-0">
+                <i class="bi-phone fs-2 mb-3 text-muted"></i>
+                <div>Contact us: +1 (555) 123-4567</div>
+            </div>
+        </div> -->
     </div>
 </section>
 
